--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,19 @@ body {
   color: #272829;
 }
 
+.buttonrt h3 {
+  font-size: 15px;
+  
+}
+
+.progress{
+  font-size: 30px;
+  text-decoration: none;
+}
+
+/*RELOJ*/
+
+
 a {
   color: #0563bb;
   text-decoration: none;
